# kbs

./: Cargo.toml  Makefile
.github/actions/build-single-image/: action.yml
.github/workflows/: build-and-push-staged-images.yml  release-clis-to-ghcr.yml  test-e2e-as.yml  test-e2e-kbs.yml  workflow-call-build-staged-images.yml  workflow-call-kbs-e2e.yml
attestation-service/src/policy_engine/: mod.rs
attestation-service/src/policy_engine/opa/: mod.rs
attestation-service/src/token/: ear_broker.rs  ear_default_policy_cpu.rego  simple.rs
kbs/: build.rs
kbs/config/: kbs-config-grpc.toml
kbs/docker/: Dockerfile
kbs/docs/: confidential-containers-eventlog.md
kbs/src/admin/: error.rs  mod.rs
kbs/src/admin/authorization/: regex_acl.rs
kbs/src/admin/token_verifier/: bearer_jwt.rs
kbs/src/attestation/coco/: grpc.rs
rvps/src/extractors/swid/: mod.rs
src/api/: Cargo.toml
tools/client/: Cargo.toml
