[workspace]
members = ["src/kbs", "src/api", "tools/client"]

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "A Generic Key Broker Service (KBS)"
documentation = "https://github.com/confidential-containers/kbs"
edition = "2021"

[workspace.dependencies]
actix-codec = ">=0.5.0"
actix-http = ">=3.3.1"
actix-service = ">=2.0.2"
actix-utils = ">=3.0.1"
anyhow = "1.0"
api-server = { path = "src/api", default-features = false }
async-trait = "0.1.31"
bumpalo = ">=3.12.0"
base64 = ">=0.21.0"
cookie = ">=0.16.2"
env_logger = "0.10.0"
futures-task = ">=0.3.27"
futures-util = ">=0.3.27"
memoffset = ">=0.8.0"
mio = ">=0.8.6"
lock_api = ">=0.4.9"
log = "0.4.17"
os_str_bytes = ">=6.5.0"
regex = ">=1.8.3"
serde_json = "1.0.89"
smallvec = ">=1.10.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-rustls = ">=0.24.0"
tempfile = "3.4.0"
untrusted = ">=0.7.1"
