[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-types = { git = "https://github.com/Xynnn007/attestation-service.git", rev = "bf81cd6"}
anyhow.workspace = true
api-server.workspace = true
base64.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
jwt-simple = "0.11.4"
kbs_protocol = { git = "https://github.com/Xynnn007/attestation-agent", rev = "8e0421b" }
log.workspace = true
reqwest = { version = "0.11.18", default-features = false, features = ["cookies", "json"] }
serde_json.workspace = true
tokio.workspace = true
